--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "lib/tessellate"]
 	path = lib/tessellate
 	url = https://github.com/cscheid/tessellate.git
+[submodule "lib/buckets"]
+	path = lib/buckets
+	url = https://github.com/mauriciosantos/buckets.git
+[submodule "lib/tess"]
+	path = lib/tess
+	url = https://github.com/mbebenita/tessellate.git
